<resources>
    <string name="app_name">NMedia!</string>
    <string name="NM">NMedia!</string>
    <string name="posts_avatar_author">posts_avatar_author</string>
    <string name="description_post_menu">posts_menu</string>
    <string name="isLike">islike</string>
    <string name="isshare">isShare</string>
    <string name="isvisibility">isVisibility</string>
    <string name="post_menu_remove">Remove</string>
    <string name="post_menu_edit">Edit</string>
    <string name="post_text">Post text</string>
    <string name="empty_post_error">Post is blank</string>
    <string name="cancel">Cancel</string>
    <string name="start_count">0</string>
    <string name="empty_content">Content is empty</string>
    <string name="edit_post_hint">Edit post</string>
    <string name="edited_text">Edited</string>
    <string name="chooser_share_post">chooser</string>
</resources>