<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/posts_avatar_author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/posts_avatars"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        android:src="@drawable/ic_netology_48dp"
        />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        tools:text="@sample/posts.json/data/author"

        />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/author"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="@drawable/ic_menu_24dp"
        style="@style/MenuCastomStyle"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,author,published"
        />



    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@sample/posts.json/data/content"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/background_video"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:autoLink="web"

        />


    <ImageButton
        android:id="@+id/play"
        android:src="@drawable/ic_baseline_play_arrow_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/background_video"
        android:padding="@dimen/common_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/background_video"

        />
    <ImageButton
        android:id="@+id/background_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_crop_square_24"
        app:layout_constraintEnd_toEndOf="@id/play_video_group"
        app:layout_constraintStart_toStartOf="@id/play_video_group"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintBottom_toTopOf="@+id/barrierTwo"
        android:background="@android:color/transparent"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/play_video_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="background_video, play" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="play"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        app:icon="@drawable/ic_likes_24dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/barrierTwo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/isLike"
        style="@style/Widget.AppTheme.LikeButton"
        android:text="@string/start_count"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_share_24dp"
        android:checkable="true"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@+id/likes"
        app:layout_constraintTop_toTopOf="@id/likes"
        app:layout_constraintBottom_toBottomOf="@id/likes"
        android:layout_marginStart="@dimen/common_spacing"
        android:contentDescription="@string/isshare"
        style="@style/Widget.AppTheme.ShareButton"
        android:text="@string/start_count"
        />

    <TextView
        android:id="@+id/visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/share"
        app:layout_constraintBottom_toBottomOf="@id/share"
        android:layout_marginEnd="@dimen/common_spacing"
        />

    <ImageButton
        android:id="@+id/isVisibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_visibility_24"
        app:layout_constraintEnd_toStartOf="@id/visibility"
        app:layout_constraintTop_toTopOf="@id/visibility"
        app:layout_constraintBottom_toBottomOf="@id/visibility"
        android:background="@android:color/transparent"
        android:layout_marginEnd="@dimen/spacing"

        android:contentDescription="@string/isvisibility" />



</androidx.constraintlayout.widget.ConstraintLayout>